tests/Project2/student_test/test_2_s05.out
Error type 5 at Line 19: unmatching type on both sides of assignment
